--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="1.jpg" />
     <meta name="viewport" content="width=device-width" >
+    <meta name="viewport" 
+      content="width=device-width, maximum-scale=1.5">
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="P.V. Herrera"
+      content="P.V. Herrera Music and Tech"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
