--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="1.jpg" />
-    <meta name="viewport" content="width=device-width" >
-    <meta name="viewport" 
-      content="width=device-width, maximum-scale=1.5">
+    <head>
+      <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+    </head>
     <meta name="theme-color" content="#000000" />
     <meta
       name="P.V. Herrera"
