--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,14 @@
   type="text/css"
   href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800"
 />
+
 <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
   crossorigin="anonymous"
 />
+<script src=https://checkout.stripe.com/checkout.js></script> 
     <title>PV HERRERA MUSIC</title>
   </head>
   <body>
