--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://js.stripe.com/v3/"></script>
+
+
     <meta charset="utf-8" />
     <link rel="icon" href="1.jpg" />
     <head>
@@ -11,6 +14,7 @@
       name="P.V. Herrera"
       content="P.V. Herrera Music and Tech"
     />
+ 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -38,11 +42,22 @@
   integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
   crossorigin="anonymous"
 />
-<script src=https://checkout.stripe.com/checkout.js></script> 
+
     <title>PV HERRERA MUSIC</title>
   </head>
   <body>
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+
+    <noscript>
+
+      <strong>We're sorry but the store doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+   
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="checkout">
+      <!-- This is the div that we will target with the PayPal SDK -->
+      <div id="paypal-button-container"></div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
