--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="1.jpg" />
 
-      <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+    <meta name="viewport" content="width=562, height=1000">
   
     <meta name="theme-color" content="#000000" />
     <meta
