Updating music player

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="1.jpg" />
 
-    <meta name="viewport" content="width=562, height=1000">
+  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   
     <meta name="theme-color" content="#000000" />
     <meta
